--- a/index.html
+++ b/index.html
@@ -1,53 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>frontend-project-lvl3</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-    <body>
-    <section class="container-fluid bg-dark p-5">
+<head>
+  <meta charset="utf-8"/>
+  <title>frontend-project-lvl3</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body>
+<section class="container-fluid bg-dark p-5">
+  <div class="row">
+    <div class="col-md-10 col-lg-8 mx-auto text-white">
+      <h1 class="display-3 mb-0">RSS агрегатор</h1>
+      <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
+      <form action class="rss-form text-body">
         <div class="row">
-            <div class="col-md-10 col-lg-8 mx-auto text-white">
-                <h1 class="display-3 mb-0">RSS агрегатор</h1>
-                <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
-                <form action class="rss-form text-body">
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-floating">
-                                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                                <label for="floatingInput">Ссылка RSS</label>
-                            </div>
-                        </div>
-                        <div class="col-auto">
-                            <button type="submit" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
-                        </div>
-                    </div>
-                </form>
-                <p class="mt-2 mb-0 text-muted">
-                    Пример: https://ru.hexlet.io/lessons.rss
-                </p>
+          <div class="col">
+            <div class="form-floating">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Ссылка RSS</label>
 
             </div>
+          </div>
+          <div class="col-auto">
+            <button type="submit" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+          </div>
         </div>
+      </form>
+      <p class="mt-2 mb-0 text-muted">
+        Пример: https://ru.hexlet.io/lessons.rss
+      </p>
 
-    </section>
+    </div>
+  </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
-    
-    <script>
-        // if ("serviceWorker" in navigator) {
-        //     window.addEventListener("load", () => {
-        //         navigator.serviceWorker
-        //             .register("service-worker.js")
-        //             .then((registration) => {
-        //                 console.log("Service Worker registered: ", registration);
-        //             })
-        //             .catch((registrationError) => {
-        //                 console.error("Service Worker registration failed: ", registrationError);
-        //             });
-        //     });
-        // }
-    </script>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</body>
+
+<script>
+  // if ("serviceWorker" in navigator) {
+  //     window.addEventListener("load", () => {
+  //         navigator.serviceWorker
+  //             .register("service-worker.js")
+  //             .then((registration) => {
+  //                 console.log("Service Worker registered: ", registration);
+  //             })
+  //             .catch((registrationError) => {
+  //                 console.error("Service Worker registration failed: ", registrationError);
+  //             });
+  //     });
+  // }
+</script>
 </html>
