--- a/index.html
+++ b/index.html
@@ -16,23 +16,35 @@
         <div class="row">
           <div class="col">
             <div class="form-floating">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <input required autofocus type="text" aria-label="rss"
+                     name="rss" class="form-control w-100"
+                     id="floatingInput"
+                     placeholder="Ссылка RSS">
               <label for="floatingInput">Ссылка RSS</label>
-
             </div>
           </div>
           <div class="col-auto">
-            <button type="submit" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+            <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
           </div>
         </div>
       </form>
       <p class="mt-2 mb-0 text-muted">
         Пример: https://ru.hexlet.io/lessons.rss
       </p>
-
+      <p class="feedback m-0 position-absolute small text-success text-danger"></p>
     </div>
   </div>
 
+</section>
+<section class="container-fluid container-xxl p-5">
+  <div class="row">
+    <div class="col-md-10 col-lg-8 order-1 mx-auto posts">
+
+    </div>
+    <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds">
+
+    </div>
+  </div>
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
