--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>frontend-project-lvl3</title>
+  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -10,8 +11,8 @@
 <section class="container-fluid bg-dark p-5">
   <div class="row">
     <div class="col-md-10 col-lg-8 mx-auto text-white">
-      <h1 class="display-3 mb-0">RSS агрегатор</h1>
-      <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
+      <h1 class="display-3 mb-0"></h1>
+      <p class="lead"></p>
       <form action class="rss-form text-body">
         <div class="row">
           <div class="col">
@@ -20,11 +21,11 @@
                      name="rss" class="form-control w-100"
                      id="floatingInput"
                      placeholder="Ссылка RSS">
-              <label for="floatingInput">Ссылка RSS</label>
+              <label for="floatingInput"></label>
             </div>
           </div>
           <div class="col-auto">
-            <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+            <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5"></button>
           </div>
         </div>
       </form>
